# english

./: .gitignore  Cargo.toml  README.md  publish.sh
.github/workflows/: ci.yml
benchmarking/: Cargo.toml
benchmarking/src/: main.rs
crates/english/: Cargo.toml  README.md  build.rs
crates/english-ccg/: Cargo.toml
crates/english-ccg/src/: builders.rs  cat.rs  combinators.rs  derivation.rs  helpers.rs  lexicon.rs  lib.rs  morphology.rs  realization.rs
crates/english-ccg/tests/: ccg.rs
crates/english-core/: Cargo.toml
crates/english-core/src/: adj.rs  grammar.rs  lib.rs  noun.rs
crates/english-core/tests/: adj_regressions.rs
crates/english-phrase/: Cargo.toml  IMPLEMENTATION_PLAN.md  RESEARCH.md  ROADMAP.md  XBAR_DP_Rewrite_Rules.md  XBAR_RESOURCES.md
crates/english-phrase/src/: builders.rs  derivation.rs  desugar.rs  error.rs  internal.rs  lexical.rs  lib.rs  realization.rs  syntax.rs
crates/english-phrase/src/realization/: runtime.rs
crates/english-phrase/src/syntax/: ast.rs
crates/english-phrase/tests/: architecture.rs  complicated_sentences.rs  extended_coverage.rs  phrase_builders.rs  stress_forms.rs  stress_sentences.rs  structure_regressions.rs  verb_phrase_rendering.rs
crates/english/examples/: semantic_triples.rs  speedmark.rs  test.rs
crates/english/src/: adj.rs  lib.rs  noun.rs  snippets.rs  verb.rs
crates/english/tests/: dictionary.rs  sense_stability.rs  surface_helpers.rs
crates/extractor/: Cargo.toml  common_english.txt  noun_plural_check.csv
crates/extractor/proptest-regressions/: registry.txt
crates/extractor/src/: args.rs  bootstrap.rs  checks.rs  extract.rs  file_generation.rs  helpers.rs  lib.rs  main.rs  pipeline.rs  registry.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
data/assignments/: adj.lock.csv  noun.lock.csv  verb.lock.csv
english-core/: Cargo.toml
english-core/src/: adj.rs  grammar.rs  lib.rs  noun.rs  sentence.rs  utils.rs  verb.rs
examples/: actions.rs  lol.rs  speedmark.rs  test.rs  test2.rs  test_insane.rs
expirements/english-ccg/: Cargo.toml
expirements/english-ccg/src/: builders.rs  cat.rs  combinators.rs  derivation.rs  helpers.rs
expirements/english-ccg/tests/: ccg.rs
expirements/english-phrase/: Cargo.toml  README.md
expirements/english-phrase/src/: lexical.rs  realization.rs  syntax.rs
expirements/english-phrase/src/syntax/: builders.rs  conversions.rs  features.rs
expirements/english-phrase/tests/: stress_forms.rs  structure_regressions.rs
extractor/: Cargo.toml  adj_array.rs  adj_check.csv  adjectives.csv  adjiki.rs  analyzed_endings.csv  insane_array.rs  insane_check.csv  insane_noun.csv  noun_array.rs  noun_phf.rs  noun_plural_check.csv  nouns_with_plurals.csv  nounsiki.rs  verb_array.rs  verb_conjugations.csv  verbs_check.csv  verbsiki.rs
extractor/src/: file_generation.rs  helpers.rs  main.rs  scratch.rs
src/: adj.rs  adj_array.rs  adj_phf.rs  grammar.rs  insane_array.rs  lib.rs  noun.rs  noun_array.rs  nounsiki.rs  sentence.rs  snippets.rs  utils.rs  verb.rs  verb_array.rs  verb_phf.rs  verbsiki.rs
xtask/src/: main.rs
