[package]
name = "english"
version = "0.0.4"
authors = ["gold-silver-copper"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

description = "English language inflector"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gold-silver-copper/english"


[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
steel-core = { git = "https://github.com/mattwparas/steel.git", branch = "master" }
steel-repl = { git = "https://github.com/mattwparas/steel.git", branch = "master" }
steel-derive = { git = "https://github.com/mattwparas/steel.git", branch = "master" }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[dependencies]
english-core = { path = "english-core" }
