[package]
name = "english"
version = "0.0.8"
authors = ["gold-silver-copper"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

description = "English inflector decliner conjugator from wiktionary data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gold-silver-copper/english"


[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[dependencies]
#english-core = { path = "english-core" }
english-core = "0.0.8"
