[workspace]
members = [
    "crates/english",
    "crates/english-phrase",
    "crates/english-core",
    "crates/extractor",
    "crates/xtask",
]
default-members = [
    "crates/english",
    "crates/english-phrase",
    "crates/english-core",
    "crates/xtask",
]
resolver = "3"

[workspace.package]
authors = ["gold-silver-copper"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gold-silver-copper/english"

[workspace.dependencies]
csv = "1.3.1"
english = { path = "crates/english", version = "0.1.3" }
english-phrase = { path = "crates/english-phrase", version = "0.1.0" }
english-core = { path = "crates/english-core", version = "0.1.0" }
phf = { version = "0.12", default-features = false, features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
