[package]
name = "extractor"
version = "0.1.0"
edition = "2024"

[features]
default = []
checks = ["dep:english"]

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
english-core = { path = "../english-core", version = "0.1.0" }
english = { path = "..", optional = true }
