[package]
name = "english-phrase"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Compositional English phrase realization built on top of english"
license.workspace = true
repository.workspace = true

[dependencies]
english = { workspace = true }
english-core = { workspace = true }
