[package]
name = "english"
version = "0.1.3"
authors.workspace = true
edition.workspace = true
description = "English inflector decliner conjugator from wiktionary data"
license.workspace = true
repository.workspace = true
include = ["build.rs", "examples/**/*.rs", "generated/**/*.rs", "src/**/*.rs", "Cargo.toml", "README.md"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
english-core = { workspace = true }
phf = { workspace = true }
