[package]
name = "english"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
description = "English inflector decliner conjugator from wiktionary data"
license.workspace = true
repository.workspace = true
include = ["build.rs", "examples/**/*.rs", "generated/**/*.rs", "src/**/*.rs", "Cargo.toml", "README.md"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Bundles the `*_variants` lookup tables (~300 KB) and enables the
# `English::{noun,verb,adj}_senses` introspection API. Off by default to keep the
# shipped data under 1 MB.
senses = []

[dependencies]
english-core = { workspace = true }
phf = { workspace = true }
