[package]
name = "extractor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
checks = ["dep:english"]

[dependencies]
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
english-core = { workspace = true }
english = { workspace = true, optional = true }
